syntax = "proto3";

option csharp_namespace = "Gateway";

service Getter {
  rpc GetState (GetRequest) returns (GetStateReply);  
  rpc GetInfo (GetRequest) returns (GetInfoReply);
  rpc GetStatus (GetStatusRequest) returns (GetReply);
}

message GetRequest {
  string ip = 1;
}

message GetReply {
  string message = 1;
}
message GetInfoReply {
  int32 id = 1; 
  string type = 2;

}message GetStateReply {
  float temprature = 1; 
  float Humidity = 2;
  bool power = 3;
}

message GetStatusRequest {
}