syntax = "proto3";

option csharp_namespace = "Gateway";

service Setter {
  rpc SetState (SetRequest) returns (SetReply);
  rpc GetStatus (GetSetterStatusRequest) returns (SetReply);
}

message SetRequest {
  string ip = 1;
  bool state = 2;
}

message SetReply {
  string message = 1;
}

message GetSetterStatusRequest {
}
